[UPDATE] Add billing form

--- a/src/containers/Signup.css
+++ b/src/containers/Signup.css
@@ -13,3 +13,13 @@
   padding-bottom: 10px;
   color: #999;
 }
+
+@media all and (min-width: 480px) {
+  .Settings {
+    padding: 60px 0;
+  }
+  .Settings form {
+    margin: 0 auto;
+    max-width: 480px;
+  }
+}
